// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render AdminSummary with 1 product 1`] = `
<div
  className="page-admin-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-admin-header__title"
    >
      Displaying 
      <span>
        1
      </span>
       
      product
       totalling 
      <span>
        ₦34.50
      </span>
       
    </h1>
    <div
      className="page-admin-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Product
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render AdminSummary with multiple products 1`] = `
<div
  className="page-admin-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-admin-header__title"
    >
      Displaying 
      <span>
        10
      </span>
       
      products
       totalling 
      <span>
        ₦786.54
      </span>
       
    </h1>
    <div
      className="page-admin-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Product
      </Link>
    </div>
  </div>
</div>
`;
